--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,13 @@ path = "src/02.rs"
 name = "03"
 path = "src/03.rs"
 
+[[bin]]
+name = "04"
+path = "src/04.rs"
+
+[[bin]]
+name = "05"
+path = "src/05.rs"
+
+
 [dependencies]
